kubernetes/apps/network/envoy-gateway/gateway/networkpolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "envoy-gateway-allow-ingress"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
  ingress:
  - fromEntities:
    - "world"
